# RustWeatherInsights

./: Cargo.toml  README.md  cronjob.yaml  dockerfile
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs  openweather.rs  weatherapi.rs
src/data_processing/: arrow.rs
src/storage/: influx_db.rs  mod.rs
src/tests/: data_processing_tests.rs  integration_tests.rs  mod.rs
src/utils/: http_client.rs
