[package]
name = "rust_weather_insights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
